# Visor

./: CMakeLists.txt  LICENSE  README.md  main.cpp
CMakeModules/: FindOSG.cmake  FindOpenVDB.cmake
Core/: CMakeLists.txt  FindGeometryVisitor.cpp  FindGeometryVisitor.h  GeometryImporter.cpp  GeometryImporter.h  ViewerWidget.cpp  ViewerWidget.h
Tests/: CMakeLists.txt  tst_basictest.cpp  tst_test_cgal.cpp  tst_test_openvdb.cpp
